# PJATK-MHE

./: README.md
MHE-Project/: .gitignore  CMakeLists.txt  HELP  MHE  input.txt  main.cpp
MHE-Project/Header_Files/: libraries.h  nonogram_algorithms.h  nonogram_functions.h  nonogram_help_functions.h  task1.h
MHE-Project/Samples/: nonogram1.json  nonogram2.json  nonogram3.json  nonogram4.json  nonogram5.json  nonogram6.json  random.json  task1.json
MHE-Project/Source_Files/: genetic_algorithm.cpp  main.cpp  nonogram_algorithms.cpp  nonogram_creator.cpp  nonogram_functions.cpp  nonogram_help_functions.cpp  task1.cpp
